--- a/scss/_generale.scss
+++ b/scss/_generale.scss
@@ -43,7 +43,7 @@ ul {
     top: -15px;
   }
   .cosaACaso:before {
-    content: "Questa è una card vuota, non so cosa inserire qui dentro. La specchio ed evito di scrivere 2 volte.";
+    content: "Questa è una card vuota, non so cosa inserire qui dentro. La specchio ed evito di scrivere 2 contenuti.";
     top: 95px;
     transform: scale(1, -1);
     backface-visibility: visible;
