--- a/scss/style.css
+++ b/scss/style.css
@@ -51,7 +51,7 @@ ul li {
   top: -15px;
 }
 .card .cosaACaso:before {
-  content: "Questa è una card vuota, non so cosa inserire qui dentro. La specchio ed evito di scrivere 2 volte.";
+  content: "Questa è una card vuota, non so cosa inserire qui dentro. La specchio ed evito di scrivere 2 contenuti.";
   top: 95px;
   transform: scale(1, -1);
   -webkit-backface-visibility: visible;
